Added style on button

--- a/myButtonStyle.html
+++ b/myButtonStyle.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My button style</title>
     <style>
-        button {
-            background-color: blue;
-            color: azure;
-            padding: 50px;
+        button{
+            background-color: aqua;
+            color: black;
+            padding-top: 80px;
+            padding-left: 40px;
+            padding-bottom: 80px;
+            padding-right: 40px;
         }
     </style>
 </head>
