--- a/myButtonStyle.html
+++ b/myButtonStyle.html
@@ -8,10 +8,13 @@
         button{
             background-color: aqua;
             color: black;
-            padding-top: 10px;
-            padding-left: 40px;
-            padding-bottom: 10px;
-            padding-right: 40px;
+            padding-top: 40px;
+            padding-left: 80px;
+            padding-bottom: 40px;
+            padding-right: 80px;
+            border-radius: 80%;
+            width: 50%;
+            height: 50%;
         }
     </style>
 </head>
